Some Basic Types

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Basic Typescript</title>
         <script src="./basic-example.js"></script>
+        <script src="./basic-types.js"></script>
     </head>
     <body></body>
 </html>
