--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Basic Typescript</title>
         <script src="./basic-example.js"></script>
         <script src="./basic-types.js"></script>
+        <script src="./generics-basics.js"></script>
     </head>
     <body></body>
 </html>
